# FPGABuddy

./: .gitignore  CMakeLists.txt  PROJECT_CONTEXT.md  README.md  README.pt-BR.md
no-OS-FatFS-SD-SDIO-SPI-RPi-Pico/src/sd_driver/SPI/: sd_card_spi.c
no-OS-FatFS-SD-SDIO-SPI-RPi-Pico/src/src/: glue.c
pio/: encoder.pio
resources/: SD_MCU_FPGA.md  spi_companion.md  spi_mcu.md  sysctrl_info.md
resources/FPGA_adds_mods/ADD/: db9_to_spi_san.v  spi_loader_san.v
resources/FPGA_adds_mods/MOD/: a2600_top_tn20k_san.vhd  mcu_spi.v
resources/Tools/ROM_DB/: db_to_bin.py  db_to_bin_ord.py  roms.json  roms_database.db
src/: config.h  config_mgr.c  config_mgr.h  db.c  db.h  encoder.c  encoder.h  font_5x8.h  fpga_ctrl.c  fpga_ctrl.h  hw_config.c  lcd_20x4.c  lcd_20x4.h  main.c  translation.c  translation.h  ui_menu.c  ui_menu.h  utils.c  utils.h
